--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- Project 1 -->
         <div class="card">
           <a href="https://evermore-gilt.vercel.app" target="_blank">
-            <img src="project1.jpg" alt="Evermore - Relationship Site">
+            <img src="Evermore.jpg" alt="Evermore - Relationship Site">
           </a>
           <div class="card-content">
             <h3><a href="https://evermore-gilt.vercel.app" target="_blank">Evermore</a></h3>
@@ -51,9 +51,9 @@
           </div>
         </div>
 
-        <!-- Project 2 -->
+        <!-- Project1 -->
         <div class="card">
-          <img src="project2.jpg" alt="HostelHub">
+          <img src="project1.jpg" alt="HostelHub">
           <div class="card-content">
             <h3>HostelHub</h3>
             <p>An all-in-one platform for hostel events, complaint management, and other essential features.</p>
