--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- Project 1 -->
         <div class="card">
           <a href="https://evermore-gilt.vercel.app" target="_blank">
-            <img src="Evermore.jpg" alt="Evermore - Relationship Site">
+            <img src="Evermore.jpg" alt="Evermore">
           </a>
           <div class="card-content">
             <h3><a href="https://evermore-gilt.vercel.app" target="_blank">Evermore</a></h3>
