--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
         <!-- Project1 -->
         <div class="card">
+<a href="https://hostelhub-pi.vercel.app/">
           <img src="project1.jpg" alt="HostelHub">
           <div class="card-content">
             <h3>HostelHub</h3>
