--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
         <!-- Project1 -->
         <div class="card">
-<a href="https://hostelhub-pi.vercel.app/">
+
           <img src="project1.jpg" alt="HostelHub">
           <div class="card-content">
-            <h3>HostelHub</h3>
+            <h3><a href="https://hostelhub-pi.vercel.app/">HostelHub</a></h3>
             <p>An all-in-one platform for hostel events, complaint management, and other essential features.</p>
           </div>
         </div>
